# PriCoRec-RecSys2026

./: .gitattributes  .gitignore  CITATION.cff  DATA.md  MANIFEST.in  README.md  REPRODUCIBILITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cloud_device_recsys/: __init__.py  metric_utils.py  run_hyperparam_search.py  run_pipeline.py  run_preprocess.py  utils.py
cloud_device_recsys/config/: __init__.py  config_parser.py  dataset_config.yaml  feature_groups.py
cloud_device_recsys/data/: __init__.py  dataset_statistics.py  item_pool.py  negative_sampler.py  positive_data.py  preprocess_ali_ccp.py  preprocess_data.py  remap_vocab_data.py  tfrecord_feature_map.py  vocab_pruner.py
cloud_device_recsys/models/: __init__.py  device_reranker.py  din_ranker.py  dual_tower_retrieval.py  losses.py  registry.py
cloud_device_recsys/pipeline/: __init__.py  base_stage.py  preranking_stage.py  reranking_stage.py  retrieval_stage.py  stage_output.py
cloud_device_recsys/tools/: __init__.py  generate_smoke_data.py
fuxictr/: features.py  metrics.py  tensorflow_utils.py  utils.py  version.py
fuxictr/datasets/: __init__.py  avazu.py
fuxictr/preprocess/: __init__.py  build_dataset.py  feature_processor.py  normalizer.py  tokenizer.py
fuxictr/pytorch/: backbone.py  torch_utils.py  training_profiler.py
model_zoo/: __init__.py
model_zoo/CL/: __init__.py
model_zoo/DCNv3/: __init__.py
model_zoo/DNN/: __init__.py
model_zoo/DeepFM/: __init__.py
model_zoo/FiBiNET/: __init__.py
model_zoo/MaskNet/: __init__.py
model_zoo/PNN/: __init__.py
model_zoo/PrivacyPreserving/: __init__.py
tests/: test_data_pipeline_integrity.py  test_losses.py  test_models_runtime.py  test_negative_pool_separation.py  test_pipeline_boundaries.py  test_remap_vocab_data.py  test_safe_registries.py  test_security_hardening.py
(+55 files in other folders)
